tests/test_files_pa3/errors/UndefineType.ic
class A {
	
	void foo() {
		B b;
	}
	
	
	void bar() {
		A a = new C();
	}
	
	void one() {
		C.doesntExist(3);
	}
}